--- a/public/css/breaks.css
+++ b/public/css/breaks.css
@@ -1,11 +1,3 @@
-/*******  LIST  *********/
-
-.breaks_table {
-	width: 1080px;
-	max-width: 1080px;
-	min-width: 1080px;
-	margin: 0 auto;
-}
 table.breaks_table .col-2 {
  	width: 3%;
 }
@@ -21,43 +13,9 @@ table.breaks_table .col-4 {
 table.breaks_table .col-5 {
  	width: 19%;
 }
-.breaks_table thead th {
-	text-transform: uppercase;
-	padding: 15px;
-	font-size: 13px;
-	text-align: center;
-	vertical-align: middle;
-	border-right: 1px solid #343A3F;
-}
-.breaks_table tr>:nth-child(5),
-.breaks_table tbody tr>:nth-child(1) {
-	border-right: none;
-}
-.breaks_table tbody tr td {
-	padding: 10px;
-	text-align: center;
-	border-right: 1px solid #71787F;
-	font-size: 15px;
-	height: 50px;
-	max-height: 50px;
-}
+
+.breaks_table tbody tr>:nth-child(1),
 .breaks_table tbody tr>:nth-child(2) {
 	border-right: none;
 }
-.breaks_table_name {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-}
-.circle_img {
-	border-radius: 100px;
-	width: 30px;
-	height: 30px;
-	object-fit: cover;
-	margin-left: 10px;
-	margin-right: 10px;
-}
-.breaks_table_points {
-	font-weight: bold;
-	text-align: center;
-}
+
