--- a/public/css/club_list.css
+++ b/public/css/club_list.css
@@ -1,11 +1,3 @@
-/*******  LIST  *********/
-
-.club_list_table {
-	width: 700px;
-	max-width: 700px;
-	min-width: 700px;
-	margin: 0 auto;
-}
 table.club_list_table .col-1 {
  	width: 1%;
 }
@@ -18,43 +10,8 @@ table.club_list_table .col-3 {
 table.club_list_table .col-4 {
  	width: 19%;
 }
-.club_list_table thead th {
-	text-transform: uppercase;
-	padding: 15px;
-	font-size: 13px;
-	text-align: center;
-	vertical-align: middle;
-	border-right: 1px solid #343A3F;
-}
+
+.club_list_table tbody tr>:nth-child(1),
 .club_list_table tr>:nth-child(4) {
 	border-right: none;
 }
-.club_list_table tbody tr td {
-	padding: 10px;
-	font-size: 15px;
-	text-align: center;
-	border-right: 1px solid #71787F;
-	height: 50px;
-	max-height: 50px;
-}
-.club_list_table tbody tr>:nth-child(1) {
-	border-right: none;
-}
-.club_list_number {
-    font-weight: bold;
-    text-align: center;
-}
-.club_list_name {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-.circle_img {
-    border-radius: 100px;
-    width: 30px;
-    height: 30px;
-    object-fit: cover;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
