--- a/public/css/group.css
+++ b/public/css/group.css
@@ -1,58 +1,16 @@
-/******* LIST ********/
-.group_table {
-    width: 1080px;
-    max-width: 1080px;
-	min-width: 1080px;
-	margin: 0 auto;
-}
 .group_table thead th {
-    padding: 15px;
-    font-size: 13px;
-    text-align: center;
-	vertical-align: middle;
-	height: 48px;
-	max-height: 48px;
-	border-right: 1px solid #343A3F;
+	height: 48px !important;
+	max-height: 48px !important;
+}
+.group_table tr>* {
+    padding: 20px !important;
+    font-size: 15px !important;
+	height: 60px !important;
+	max-height: 60px !important;
 }
 .group_table tr>:nth-child(2) {
     width: 250px;
 }
-.group_table tr>* {
-    padding: 20px;
-    font-size: 15px;
-	height: 60px;
-	max-height: 60px;
-}
-.group_table tbody tr {
-    font-size: 15px;
-}
-.lastname-uppercase {
- 	text-transform: uppercase;
-}
-.groups_table_name {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-.circle_img {
-    border-radius: 100px;
-    width: 30px;
-    height: 30px;
-    object-fit: cover;
-    margin-right: 10px;
-}
-.groups_table_number {
-    font-weight: bold;
-    text-align: center;
-}
-
-/* BORDERS */
-
-.group_table tbody tr td {
-    border-right: 1px solid #71787F;
-}
-.group_table tbody tr>:nth-child(1),
-.group_table thead tr th:last-child,
-.group_table tbody tr>:last-child {
+.group_table tbody tr>:nth-child(1) {
     border-right: none;
 }
