--- a/public/css/match_list.css
+++ b/public/css/match_list.css
@@ -1,8 +1,3 @@
-.matches_list_table{
-    width: 1080px;
-    max-width: 1080px;
-	margin: 0 auto;
-}
 table.matches_list_table .col-1 {
  	width: 1%;
 }
@@ -31,26 +26,14 @@ table.matches_list_table .col-9 {
  	width: 1%;
 }
 .matches_list_table thead th {
-	text-transform: uppercase;
-	padding: 15px;
-	font-size: 13px;
-	text-align: center;
-	vertical-align: middle;
+	border-right: 0px !important;
 }
 .matches_list_table tbody tr td {
-	padding: 10px;
-	text-align: center;
-    font-size: 15px;
-    height: 50px;
-    max-height: 50px;
-	vertical-align: middle;
+	border-right: 0px !important;
 }
 .matches_list_table_youtube img {
 	height: 20px;
 	width: auto;
-}
-.matches_list_table_score {
-	font-size: 20px;
 }
 .odd_youtube {
     background-color: #4B5055;
