--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,3 @@
-.margin-b_30{
-	margin-bottom: 30px !important;
-}
-.black_text{
-	color: black;
-}
 input, select, button{
 	color: black;
 }
@@ -55,18 +49,7 @@ table col[class*="col-"] {
 .even_num {
 	background-color: #61892F;
 }
-.container {
-    color: #fff;
-    text-align: center;
-    margin: 0 auto;
-}
-.sub-container {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	margin-bottom: 100px;
-}
+
 .radius_br {
 	border-bottom-right-radius: 8px;
 }
@@ -79,31 +62,38 @@ table col[class*="col-"] {
 .radius_tl {
 	border-top-left-radius: 8px;
 }
+
 .bold {
 	font-weight: bold;
 }
-
-.section_header {
-	width: 1080px;
-	max-width: 1080px;
-	margin: 0 auto;
+.font_20 {
+	font-size: 20px;
 }
-.section_header_700 {
-	width: 700px;
-	max-width: 700px;
-	margin: 0 auto;
+.uppercase {
+ 	text-transform: uppercase;
 }
-.header_sign {
-	text-transform: uppercase;
-	font-size: 22px;
-	text-align: left;
-	margin: 20px auto;
-	font-weight: bold;
+.margin-b_30{
+	margin-bottom: 30px !important;
+}
+.black_text{
+	color: black;
 }
 
-.list_container {
-    margin: 0;
-    padding: 0;
-    border-radius: 8px;
-    border-top: 3px solid #61892F;
+.photo_name {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
+.circle_img {
+    border-radius: 100px;
+    width: 30px;
+    height: 30px;
+    object-fit: cover;
+    margin-right: 10px;
+}
+.thead_icon {
+    margin-right: 3px;
+    width: 12px;
+    height: 12px;
+}
+
