--- a/public/css/containers.css
+++ b/public/css/containers.css
@@ -33,6 +33,7 @@
     padding: 0;
     border-radius: 8px;
     border-top: 3px solid #61892F;
+	box-shadow: 0px 5px 10px #131617;
 }
 .list_table {
     width: 1080px;
