--- a/public/css/lobby_list.css
+++ b/public/css/lobby_list.css
@@ -22,6 +22,7 @@
 	display: table-row-group;
 }
 .list-match-lobby-player-table {
+	box-shadow: 0px 5px 10px #131617;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
