--- a/public/css/participants.css
+++ b/public/css/participants.css
@@ -111,28 +111,17 @@ table.participants_table .col-6 {
 	display: none;
 	justify-content: center;
 }
-.players_list_box_letter {
-	color: #fff;
-	text-transform: uppercase;
-	font-size: 40px;
-	font-weight: 700;
-	padding-right: 15px;
-	text-align: center;
-	border-right: 3px solid #61892F;
-	float: left;
-	margin-bottom: 40px;
-}
 figure {
 	margin: 0 auto;
-	min-height: 285px;
-	max-height: 285px;
+	min-height: 265px;
+	max-height: 265px;
 }
 .players_list_item_box {
 	max-width: 230px;
 	min-width: 230px;
-	max-height: 355px;
-	min-height: 355px;
-	margin-bottom: 40px;
+	max-height: 300px;
+	min-height: 300px;
+	margin-bottom: 60px;
 	background-color: #474B4F;
 	float: left;
 	display: inline-block;
@@ -145,32 +134,32 @@ figure {
 }
 .players_list_item_photo {
 	width: 100%;
-	max-height: 355px;
-	z-index: 0;
+	max-height: 300px;
 	border-radius: 8px;
 	filter: brightness(80%);
+	object-fit: cover;
 }
 .players_list_item_details {
-	box-shadow: 0px -3px 12px 0px #222629;
-	max-height: 80px;
-	min-height: 80px;
-	text-align: center;
-	padding: 10px 10px;
-	background-color: #474B4F;
-	border-top: 3px solid #61892F;
-	border-radius: 8px;
-	position: absolute;
-	width: 230px;
-	position: relative;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    box-shadow: 0px -3px 12px 0px #222629;
+    max-height: 60px;
+    min-height: 60px;
+    width: 230px;
+    padding: 10px 10px;
+    background-color: #474B4F;
+    border-radius: 4px;
+    border-left: 3px solid #61892F;
 }
 .players_list_item_name {
 	font-size: 15px;
-	margin: 5px 0px;
+	margin: 0;
+	margin-bottom: 3px;
 	font-weight: 300;
 	color: #fff;
-}
-.surname {
-	text-transform: uppercase;
 }
 .players_list_item_location {
 	font-size: 12px;
