--- a/public/css/available_tables.css
+++ b/public/css/available_tables.css
@@ -13,9 +13,10 @@
 /*****  BUSY SNOOKER TABLE  *****/
 .circle_img_clb {
 	border-radius: 100px;
-	width: 70px;
-	height: 70px;
+	width: 60px;
+	height: 60px;
 	object-fit: cover;
+	margin-bottom: 10px;
 }
 
 .stable_containers {
